Bug #29099 slow backup of diskdata
Submitted: 14 Jun 2007 6:39 Modified: 15 Jun 2007 14:34
Reporter: Tomas Ulin Email Updates:
Status: Closed
Category:Server: ClusterDD Severity:S2 (Serious)
Version:5.1 OS:Any
Assigned to: Tomas Ulin Target Version:

[14 Jun 2007 6:39] Tomas Ulin
Description:
backup of disk data is too slow...

on some typical systems scan only gets 2.5 M/bytes per second

and consequently the backup becomes slow

How to repeat:
backup DD and what iostat

Suggested fix:
implement page/extent prefetch during scan in disk order
[14 Jun 2007 14:09] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/28759

ChangeSet@1.2495, 2007-06-14 16:10:13+02:00, tomas@whalegate.ndb.mysql.com +8 -0
  bug#29099 - slow backup for disk data
  - implement read ahead during disk data scan
[14 Jun 2007 17:23] Tomas Ulin
with this bugfix we got from 2.5 M/S to 20 M/S...  this is with no load, simultaneous load
will change this depending on the load
[15 Jun 2007 14:34] Jon Stephens
Thank you for your bug report. This issue has already been fixed in the latest released
version of that product, which you can download at

  http://www.mysql.com/downloads/

Documented in 5.1.15-ndb-6.1.13 changelog.
[18 Jun 2007 7:49] Bugs System
Pushed into 5.1.20-beta
[3 Jul 2007 6:45] Jon Stephens
Also documented for telco-6.2.3 release.