bug#29099 - slow backup for disk data - implement read ahead during disk data scan